<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ragone.io.quietmind.MainActivity"
    android:keepScreenOn="true"
    tools:showIn="@layout/activity_main">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_imageView_logo"
            android:importantForAccessibility="no"
            android:src="@drawable/logo"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">
        </ImageView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_imageView_logo_text"
            android:contentDescription="@string/app_name"
            android:paddingBottom="20dp"
            android:src="@drawable/logo_text">
        </ImageView>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
            <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
            <!--android:background="@color/ruler">-->

        <!--</View>-->


        <LinearLayout android:id="@+id/dayLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                      android:focusable="true"
                      android:clickable="true"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

            <!-- Checkboxes -->

            </LinearLayout>

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:text="LONGEST STREAK: 15 days"-->
        <!--android:textColor="@color/dark_gray"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/float_color"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@color/white"
                android:text="@string/time"
                android:layout_gravity="left"/>

            <ImageView android:id="@+id/stats_button"
                       android:contentDescription="@string/stats"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="right"
                       android:paddingLeft="16dp"
                       android:paddingTop="21dp"
                       android:paddingBottom="16dp"
                       android:paddingRight="16dp"
                       android:src="@drawable/ic_menu"
                />

        </FrameLayout>

        <ragone.io.quietmind.WheelView android:id="@+id/wheel"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingTop="2dp"
            android:contentDescription="@string/wheel_description"
            app:wvHighlightColor="@color/float_color"
            app:wvMarkRatio="0.5"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="left">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/vipassanaMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumb="@drawable/thumb_bg"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vipassana_mode"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <Button android:id="@+id/interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="@color/white"
                    android:text="@string/set_interval"/>
        </FrameLayout>


        <TextView android:id="@+id/bigText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_a_deep_breath"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
                  android:layout_marginTop="40dp"
                  android:fontFamily="sans-serif-thin"
            android:textSize="30sp"/>

    </LinearLayout>

</LinearLayout>
